--- a/go/tech/channel/index.html
+++ b/go/tech/channel/index.html
@@ -1,1 +1,16 @@
-<h1>这就是channel了，到达即终点</h1>
+<body>
+    <code markdown>
+[TOC]
+## 标题1
+### 标题1.1
+## 标题2
+### 标题2.1
+    </code>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script>
+    var m=document.querySelectorAll('code[markdown]');
+    for(var i=0;i<m.length;i++){
+    m[i].outerHTML='<div>'+marked(m[i].innerHTML)+'</div>';
+    }
+    </script>
+</body>
