--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<h1>Hello Windqiu who a gopher</h1>
+<h1>简介</h1>
 <br/>
+<h5>我是windqiu，喜欢学习技术并研究，php+go目前是我的探索方向</h5>
+<h5>以下是我的学习路径</h5>
 <a href="/go/tech/channel/">channel 理解</a>
+<a href="/go/tech/switch/">switch 要怎么用？</a>
